# python-flask/swagger_server/controllers/services_controller.py
@@ -5,73 +5,32 @@ from swagger_server.models.service import Service  # noqa: E501
 from swagger_server import util
 
 
-def services_create(body):  # noqa: E501
-    """Create a service and add it to the services list
+def get_services(channel, host):  # noqa: E501
+    """Get all services of a host
 
-    Create a new service in the services list # noqa: E501
+    Get all services of a host # noqa: E501
 
-    :param body: Service to create
-    :type body: dict | bytes
-
-    :rtype: None
-    """
-    if connexion.request.is_json:
-        body = Service.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
-
-
-def services_delete(host, name):  # noqa: E501
-    """Delete a service from the services list
-
-    Delete a service # noqa: E501
-
-    :param host: Host of the service to delete from the list
+    :param channel: Name of the channel
+    :type channel: str
+    :param host: Name of the host
     :type host: str
-    :param name: Name of the service to delete the list
-    :type name: str
 
-    :rtype: None
+    :rtype: List[Service]
     """
     return 'do some magic!'
 
 
-def services_read_all(host):  # noqa: E501
-    """Read all services from one host
+def put_service(channel, host, service, body=None):  # noqa: E501
+    """Service notification
 
-    Read all services from one host # noqa: E501
+    Service notification # noqa: E501
 
-    :param host: Host of the service to get from the list
+    :param channel: Name of the channel
+    :type channel: str
+    :param host: Name of the host
     :type host: str
-
-    :rtype: Service
-    """
-    return 'do some magic!'
-
-
-def services_read_one(host, name):  # noqa: E501
-    """Read one service from the services list
-
-    Read one service from the services list # noqa: E501
-
-    :param host: Host of the service to get from the list
-    :type host: str
-    :param name: Name of the service to get from the list
-    :type name: str
-
-    :rtype: Service
-    """
-    return 'do some magic!'
-
-
-def services_update(host, name, body=None):  # noqa: E501
-    """Update a service in the services list
-
-    Update a service in the services list # noqa: E501
-
-    :param host: Host of the service to update in the list
-    :type host: str
-    :param name: Name of the service to update in the list
-    :type name: str
+    :param service: Name of the service
+    :type service: str
     :param body: 
     :type body: dict | bytes
 
